[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assests/SpikeShotgun.glb" type="PackedScene" id=1]
[ext_resource path="res://Muzzle.tres" type="Material" id=2]
[ext_resource path="res://Player/Flash.gd" type="Script" id=3]
[ext_resource path="res://Assests/muzzleflash.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Weapons/SpikeShotgun.gd" type="Script" id=5]

[node name="SpikeShotgun" instance=ExtResource( 1 )]
transform = Transform( -1.31134e-09, 0, 0.03, 0, 0.03, 0, -0.03, 0, -1.31134e-09, 0.38, -0.36, -0.769 )
script = ExtResource( 5 )

[node name="Flash" type="Spatial" parent="." index="1"]
transform = Transform( -3.0598e-07, 0, 7, 0, 7, 0, -7, 0, -3.0598e-07, 6.98716, 0.51343, -1.17766 )
visible = false
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Flash" index="0"]
transform = Transform( -0.4, 0, -3.49691e-08, 0, 0.4, 0, 3.49691e-08, 0, -0.4, -0.113677, -0.00894785, 0.597291 )
mesh = ExtResource( 4 )
material/0 = ExtResource( 2 )
material/1 = ExtResource( 2 )
material/2 = ExtResource( 2 )

[node name="OmniLight" type="OmniLight" parent="Flash" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.10613, 0.5, 0.730298 )
light_color = Color( 1, 0.92549, 0.576471, 1 )
light_energy = 100.0
omni_range = 3.0
omni_attenuation = 9.85

[node name="Timer" type="Timer" parent="Flash" index="2"]
wait_time = 0.1

[node name="RayCast" type="RayCast" parent="." index="2"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 10.2348, 0.485207, -0.0130599 )
enabled = true
cast_to = Vector3( 0, 0, -100 )
debug_shape_thickness = 5.0

[node name="RayCast2" type="RayCast" parent="." index="3"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 10.2348, 0, -0.738416 )
enabled = true
cast_to = Vector3( 0, 0, -100 )
debug_shape_thickness = 5.0

[node name="RayCast3" type="RayCast" parent="." index="4"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 10.2348, 0, 0.86163 )
enabled = true
cast_to = Vector3( 0, 0, -100 )
debug_shape_thickness = 5.0

[node name="SpotLight" type="SpotLight" parent="." index="5"]
transform = Transform( -1.45705e-06, 0, -33.3333, 0, 33.3333, 0, 33.3333, 0, -1.45705e-06, 5.92368, 0.910212, 1.94049 )

[connection signal="timeout" from="Flash/Timer" to="." method="_on_Timer_timeout"]
